--- a/home/wiki/Android/Setup.html
+++ b/home/wiki/Android/Setup.html
@@ -48,7 +48,7 @@
           <a href="#Android_file_path"><span class="tocnumber">5</span> <span class="toctext">Android file path</span></a>
         </li>
         <li class="toclevel-1 tocsection-8">
-          <a href="#Android_wikis_"><span class="tocnumber">6</span> <span class="toctext">Android wikis</span></a>
+          <a href="#Android_wikis_.5B1.5D"><span class="tocnumber">6</span> <span class="toctext">Android wikis <sup>[1]</sup></span></a>
         </li>
       </ul>
     </div>
@@ -189,7 +189,7 @@
     </ul>
     <dl>
       <dd>
-        If you're on Marshmallow, you will get a prompt to allow XOWA to read your SD card. Please allow it. For more information on XOWA's privacy policy, see <a href="http://xowa.org/home/wiki/Help/Privacy/Android.html" id="xolnki_2" title="Help/Privacy/Android" class="xowa-visited">Help/Privacy/Android</a>
+        If you're on Marshmallow, you will get a prompt to allow XOWA to read your SD card. Please allow it. For more information on XOWA's privacy policy, see <a href="http://xowa.org/home/wiki/Help/Privacy/Android.html" id="xolnki_2" title="Help/Privacy/Android">Help/Privacy/Android</a>
       </dd>
     </dl>
     <ul>
@@ -312,7 +312,7 @@
       <br>
     </p>
     <h2>
-      <span class="mw-headline" id="Android_wikis_">Android wikis <sup id="cite_ref-more_wikis_0-0" class="reference"><a href="#cite_note-more_wikis-0">[1]</a></sup></span>
+      <span class="mw-headline" id="Android_wikis_.5B1.5D">Android wikis <sup id="cite_ref-more_wikis_0-0" class="reference"><a href="#cite_note-more_wikis-0">[1]</a></sup></span>
     </h2>
     <table class='wikitable sortable'>
       <tr>
