--- a/home/wiki/App/Import/Download_Central.html
+++ b/home/wiki/App/Import/Download_Central.html
@@ -191,7 +191,7 @@
         For the desktop, just restart XOWA. XOWA will automatically pick up the new wiki
       </li>
       <li>
-        For Android, copy the files to your SD Card. See <a href="http://xowa.org/home/wiki/Android/Setup.html" id="xolnki_3" title="Android/Setup" class="xowa-visited">Android Setup</a> for a list of paths.
+        For Android, copy the files to your SD Card. See <a href="http://xowa.org/home/wiki/Android/Setup.html" id="xolnki_3" title="Android/Setup">Android Setup</a> for a list of paths.
       </li>
     </ul>
     <h2>
