--- a/home/wiki/App/Import/Import_overview.html
+++ b/home/wiki/App/Import/Import_overview.html
@@ -58,11 +58,11 @@
         <b>Images included</b>: Listed wikis will also include image databases. The options below require downloading images separately.
       </li>
       <li>
-        <b>Fewer selection</b>: There are currently only a handful of wikis. More will be generated throughout 2016. If you need a specific wiki, please contact me by the <a href="http://xowa.org/home/wiki/Help/Feedback.html" id="xolnki_3" title="Help/Feedback" class="xowa-visited">Feedback</a> page.
+        <b>Fewer selection</b>: There are currently only a handful of wikis. More will be generated throughout 2016. If you need a specific wiki, please contact me by the <a href="http://xowa.org/home/wiki/Help/Feedback.html" id="xolnki_3" title="Help/Feedback">Feedback</a> page.
       </li>
     </ul>
     <p>
-      For more info, see <a href="http://xowa.org/home/wiki/App/Import/Download_Central.html" id="xolnki_4" title="App/Import/Download Central" class="xowa-visited">App/Import/Download_Central</a>
+      For more info, see <a href="http://xowa.org/home/wiki/App/Import/Download_Central.html" id="xolnki_4" title="App/Import/Download Central">App/Import/Download_Central</a>
     </p>
     <h2>
       <span class="mw-headline" id="Import_online_by_click">Import online by click</span>
