--- a/home/wiki/App/Search.html
+++ b/home/wiki/App/Search.html
@@ -559,7 +559,7 @@
       By default, XOWA returns results sorted by "page length descending". In other words, the largest page would be the first in the list and the smallest page would be the last.
     </p>
     <p>
-      If a wiki is built with PageRank, or if a wiki is downloaded from archive.org, then the results will be sorted by "PageRank descending". See <a href="http://xowa.org/home/wiki/Options/Search.html" id="xolnki_2" title="Options/Search" class="xowa-visited">Options/Search</a> for enabling PageRank.
+      If a wiki is built with PageRank, or if a wiki is downloaded from archive.org, then the results will be sorted by "PageRank descending". See <a href="http://xowa.org/home/wiki/Options/Search.html" id="xolnki_2" title="Options/Search">Options/Search</a> for enabling PageRank.
     </p>
     <h2>
       <span class="mw-headline" id="Background_database_search">Background database search</span>
@@ -598,7 +598,7 @@
     </p>
     <ul>
       <li>
-        <b>Configure PageRank</b>: See <a href="http://xowa.org/home/wiki/Options/Search.html" id="xolnki_3" title="Options/Search" class="xowa-visited">Options/Search</a>
+        <b>Configure PageRank</b>: See <a href="http://xowa.org/home/wiki/Options/Search.html" id="xolnki_3" title="Options/Search">Options/Search</a>
       </li>
       <li>
         <b>Configure Address bar autocomplete</b>: See <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_4" title="Options/Search suggest" class="xowa-visited">Options/Search_suggest</a>
