--- a/home/wiki/App/Setup/System_requirements.html
+++ b/home/wiki/App/Setup/System_requirements.html
@@ -107,7 +107,7 @@
             If Java is not installed on your machine, you can get it from <a href="http://www.java.com/en/download/manual.jsp" rel="nofollow" class="external free">http://www.java.com/en/download/manual.jsp</a>
           </li>
           <li>
-            If you don't want to install Java, you can copy it from an existing machine, or download a portable package. See <a href="http://xowa.org/home/wiki/App/Setup/Flash_card.html" id="xolnki_3" title="App/Setup/Flash card" class="xowa-visited">App/Setup/Flash card</a>
+            If you don't want to install Java, you can copy it from an existing machine, or download a portable package. See <a href="http://xowa.org/home/wiki/App/Setup/Flash_card.html" id="xolnki_3" title="App/Setup/Flash card">App/Setup/Flash card</a>
           </li>
           <li>
             On Debian Linux systems you can do <span class='console'>sudo apt-get install openjdk-7-jre</span>
