--- a/home/wiki/App/UI/Main_window.html
+++ b/home/wiki/App/UI/Main_window.html
@@ -256,7 +256,7 @@
         The info box is located in the bottom-right hand corner of the screen.
       </li>
       <li>
-        It displays warnings from the application. It is disabled by default, but can be enabled through <a href="http://xowa.org/home/wiki/Options/Dev.html" id="xolnki_4" title="Options/Dev" class="xowa-visited">Options/Dev</a>
+        It displays warnings from the application. It is disabled by default, but can be enabled through <a href="http://xowa.org/home/wiki/Options/Dev.html" id="xolnki_4" title="Options/Dev">Options/Dev</a>
       </li>
       <li>
         To select the info box, press Ctrl+Alt+N.
