--- a/home/wiki/App/Xtn/Mediawiki/Math/Setup.html
+++ b/home/wiki/App/Xtn/Mediawiki/Math/Setup.html
@@ -31,10 +31,10 @@
           <a href="#MathJax"><span class="tocnumber">1</span> <span class="toctext">MathJax</span></a>
         </li>
         <li class="toclevel-1 tocsection-2">
-          <a href="#LaTEX"><span class="tocnumber">2</span> <span class="toctext">LaTEX</span></a>
+          <a href="#LaTEX"><span class="tocnumber">2</span> <span class="toctext">LaT<sub>E</sub>X</span></a>
         </li>
         <li class="toclevel-1 tocsection-3">
-          <a href="#MathJax_compared_to_XOWA_LaTEX"><span class="tocnumber">3</span> <span class="toctext">MathJax compared to XOWA LaTEX</span></a>
+          <a href="#MathJax_compared_to_XOWA_LaTEX"><span class="tocnumber">3</span> <span class="toctext">MathJax compared to XOWA LaT<sub>E</sub>X</span></a>
         </li>
         <li class="toclevel-1 tocsection-4">
           <a href="#MathJax_developer_notes"><span class="tocnumber">4</span> <span class="toctext">MathJax developer notes</span></a>
