--- a/home/wiki/Change_log/2013.html
+++ b/home/wiki/Change_log/2013.html
@@ -375,7 +375,7 @@
     </p>
     <ul>
       <li>
-        (add) File: English Wikipedia image database updated for 2013-12-02. See: <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_4" title="Dashboard/Image databases" class="xowa-visited">Dashboard/Image_databases</a>
+        (add) File: English Wikipedia image database updated for 2013-12-02. See: <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_4" title="Dashboard/Image databases">Dashboard/Image_databases</a>
       </li>
       <li>
         (change) Parser: English Wikipedia pages (2013-12-02) with {{Dead_link}} no longer fail. See: <a href="http://en.wikipedia.org/wiki/Wikia" rel="nofollow" class="external free">http://en.wikipedia.org/wiki/Wikia</a>
@@ -553,7 +553,7 @@
         (change) Log: Added redlink logging statements.
       </li>
       <li>
-        (change) Options: Added <a href="http://xowa.org/home/wiki/Options/Config_script.html" id="xolnki_11" title="Options/Config script" class="xowa-visited">Options/Config_script</a>.
+        (change) Options: Added <a href="http://xowa.org/home/wiki/Options/Config_script.html" id="xolnki_11" title="Options/Config script">Options/Config_script</a>.
       </li>
       <li>
         (change) Scribunto: Gsub was not handling lua callback functions correctly; EX:[[Minnesota]] [[nice]] and regx of %[%[([^#|%]]-)%]%]. See: <a href="http://en.wiktionary.org/wiki/Minnesota_nice" rel="nofollow" class="external free">http://en.wiktionary.org/wiki/Minnesota_nice</a>
@@ -576,7 +576,7 @@
     </p>
     <ul>
       <li>
-        (add) Torrents for English Wikipedia images.. See <a href="http://xowa.org/home/wiki/App/Import/English_Wikipedia.html" id="xolnki_12" title="App/Import/English Wikipedia" class="xowa-visited">App/Import/English_Wikipedia</a> and <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_13" title="Dashboard/Image databases" class="xowa-visited">Dashboard/Image_databases</a>
+        (add) Torrents for English Wikipedia images.. See <a href="http://xowa.org/home/wiki/App/Import/English_Wikipedia.html" id="xolnki_12" title="App/Import/English Wikipedia">App/Import/English_Wikipedia</a> and <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_13" title="Dashboard/Image databases">Dashboard/Image_databases</a>
       </li>
       <li>
         (fix) [broken since:v0.4.4] Xnde: Incorrect parsing of xml attributes with embedded apostrophe / quote; EX:a = "b'c" -&gt; a = "bc". See: <a href="http://en.wikisource.org/wiki/Alice's_Adventures_in_Wonderland" rel="nofollow" class="external free">http://en.wikisource.org/wiki/Alice's_Adventures_in_Wonderland</a>
@@ -625,7 +625,7 @@
     </p>
     <ul>
       <li>
-        (add) Torrent: Added torrent: xowa_simplewiki_images_2013-10-30_complete; EX:/bin/torrent/wiki/simple.wikipedia.org/xowa_simplewiki_images_2013-10-30_complete.torrent. See: <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_14" title="Dashboard/Image databases" class="xowa-visited">Dashboard/Image_databases</a>
+        (add) Torrent: Added torrent: xowa_simplewiki_images_2013-10-30_complete; EX:/bin/torrent/wiki/simple.wikipedia.org/xowa_simplewiki_images_2013-10-30_complete.torrent. See: <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_14" title="Dashboard/Image databases">Dashboard/Image_databases</a>
       </li>
       <li>
         (fix) [broken since:v0.11.1] Html: Redlinks does not work when using "Back" / "Forward" {detected by Schnark; hidp123}.
