--- a/home/wiki/Change_log/2014.html
+++ b/home/wiki/Change_log/2014.html
@@ -706,7 +706,7 @@
     </p>
     <ul>
       <li>
-        Doc: Add note explaining image tarballs and tarball status {suggested by anonymous}. See: <a href="http://xowa.org/home/wiki/Archive/Usage/Offline_images.html" id="xolnki_6" title="Archive/Usage/Offline images">Archive/Usage/Offline_images</a> <a href="http://xowa.org/home/wiki/App/Import/English_Wikipedia.html" id="xolnki_7" title="App/Import/English Wikipedia" class="xowa-visited">App/Import/English_Wikipedia</a>
+        Doc: Add note explaining image tarballs and tarball status {suggested by anonymous}. See: <a href="http://xowa.org/home/wiki/Archive/Usage/Offline_images.html" id="xolnki_6" title="Archive/Usage/Offline images">Archive/Usage/Offline_images</a> <a href="http://xowa.org/home/wiki/App/Import/English_Wikipedia.html" id="xolnki_7" title="App/Import/English Wikipedia">App/Import/English_Wikipedia</a>
       </li>
     </ul>
     <p>
@@ -869,7 +869,7 @@
     </p>
     <ul>
       <li>
-        Wikivoyage.RelatedArticles: Fix {{#related:Page}} not working (affects many en.v pages showing {{#related}} at bottom); EX:/xowa/bin/any/xowa/cfg/lang/en.gfs. See: <a href="https://en.wikivoyage.org/wiki/China" rel="nofollow" class="external free">https://en.wikivoyage.org/wiki/China</a> <a href="http://xowa.org/home/wiki/Diagnostics/Xtns/Wikivoyage/All.html" id="xolnki_9" title="Diagnostics/Xtns/Wikivoyage/All">Diagnostics/Xtns/Wikivoyage/All</a>
+        Wikivoyage.RelatedArticles: Fix {{#related:Page}} not working (affects many en.v pages showing {{#related}} at bottom); EX:/xowa/bin/any/xowa/cfg/lang/en.gfs. See: <a href="https://en.wikivoyage.org/wiki/China" rel="nofollow" class="external free">https://en.wikivoyage.org/wiki/China</a> <a href="http://xowa.org/home/wiki/Diagnostics/Xtns/Wikivoyage/All.html" id="xolnki_9" title="Diagnostics/Xtns/Wikivoyage/All" class="xowa-visited">Diagnostics/Xtns/Wikivoyage/All</a>
       </li>
     </ul>
     <p>
@@ -1615,7 +1615,7 @@
         Html.Portal: Add "Show home menu in sidebar" {suggested by Anselm}. See: <a href="http://xowa.org/home/wiki/Options/Wiki/HTML.html" id="xolnki_14" title="Options/Wiki/HTML">Options/Wiki/HTML</a>
       </li>
       <li>
-        Dev: Add option to show / hide warnings / notes. See: <a href="http://xowa.org/home/wiki/Options/Dev.html" id="xolnki_15" title="Options/Dev" class="xowa-visited">Options/Dev</a>
+        Dev: Add option to show / hide warnings / notes. See: <a href="http://xowa.org/home/wiki/Options/Dev.html" id="xolnki_15" title="Options/Dev">Options/Dev</a>
       </li>
     </ul>
     <p>
@@ -1731,10 +1731,10 @@
     </p>
     <ul>
       <li>
-        Module.Popups: Reduce hide window time from 600 ms back to 400 ms. See: <a href="http://xowa.org/home/wiki/Options/Popups.html" id="xolnki_16" title="Options/Popups" class="xowa-visited">Options/Popups</a>
+        Module.Popups: Reduce hide window time from 600 ms back to 400 ms. See: <a href="http://xowa.org/home/wiki/Options/Popups.html" id="xolnki_16" title="Options/Popups">Options/Popups</a>
       </li>
       <li>
-        Module.Popups: Add mvar, math, nihongo* to keeplist. See: <a href="http://xowa.org/home/wiki/Options/Popups.html" id="xolnki_17" title="Options/Popups" class="xowa-visited">Options/Popups</a> <a href="https://en.wikipedia.org/wiki/Degrees_of_freedom_(physics_and_chemistry)" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Degrees_of_freedom_(physics_and_chemistry)</a> <a href="https://en.wikipedia.org/wiki/Mono_no_aware" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Mono_no_aware</a>
+        Module.Popups: Add mvar, math, nihongo* to keeplist. See: <a href="http://xowa.org/home/wiki/Options/Popups.html" id="xolnki_17" title="Options/Popups">Options/Popups</a> <a href="https://en.wikipedia.org/wiki/Degrees_of_freedom_(physics_and_chemistry)" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Degrees_of_freedom_(physics_and_chemistry)</a> <a href="https://en.wikipedia.org/wiki/Mono_no_aware" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Mono_no_aware</a>
       </li>
       <li>
         Performance: Add option to load html from url instead of from memory. See: <a href="http://xowa.org/home/wiki/Options/Security.html" id="xolnki_18" title="Options/Security" class="xowa-visited">Options/Security</a>
@@ -1833,19 +1833,19 @@
     </p>
     <ul>
       <li>
-        Module.Popups: Add performance optimization for English Wikipedia popups; EX:See "Template keeplist". See: <a href="http://xowa.org/home/wiki/Options/Popups.html" id="xolnki_19" title="Options/Popups" class="xowa-visited">Options/Popups</a>
+        Module.Popups: Add performance optimization for English Wikipedia popups; EX:See "Template keeplist". See: <a href="http://xowa.org/home/wiki/Options/Popups.html" id="xolnki_19" title="Options/Popups">Options/Popups</a>
       </li>
       <li>
         Module.Popups: Add XowaPopupHistory button at bottom of popup; EX:hover over sundial icon.
       </li>
       <li>
-        Module.Popups: Increase defaults for number of words shown. See: <a href="http://xowa.org/home/wiki/Options/Popups.html" id="xolnki_20" title="Options/Popups" class="xowa-visited">Options/Popups</a>
+        Module.Popups: Increase defaults for number of words shown. See: <a href="http://xowa.org/home/wiki/Options/Popups.html" id="xolnki_20" title="Options/Popups">Options/Popups</a>
       </li>
       <li>
-        Module.Popups: Increase hover show time from 400 to 600 ms (affects number of accidental hovers while scrolling through page). See: <a href="http://xowa.org/home/wiki/Options/Popups.html" id="xolnki_21" title="Options/Popups" class="xowa-visited">Options/Popups</a>
+        Module.Popups: Increase hover show time from 400 to 600 ms (affects number of accidental hovers while scrolling through page). See: <a href="http://xowa.org/home/wiki/Options/Popups.html" id="xolnki_21" title="Options/Popups">Options/Popups</a>
       </li>
       <li>
-        Options: Add options for configuring paths of other apps. See: <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_22" title="Options/Files" class="xowa-visited">Options/Files</a> <a href="http://xowa.org/home/wiki/Options/Math.html" id="xolnki_23" title="Options/Math" class="xowa-visited">Options/Math</a> <a href="http://xowa.org/home/wiki/Options/Score.html" id="xolnki_24" title="Options/Score">Options/Score</a> <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_25" title="Options/Import" class="xowa-visited">Options/Import</a>
+        Options: Add options for configuring paths of other apps. See: <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_22" title="Options/Files" class="xowa-visited">Options/Files</a> <a href="http://xowa.org/home/wiki/Options/Math.html" id="xolnki_23" title="Options/Math">Options/Math</a> <a href="http://xowa.org/home/wiki/Options/Score.html" id="xolnki_24" title="Options/Score">Options/Score</a> <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_25" title="Options/Import" class="xowa-visited">Options/Import</a>
       </li>
     </ul>
     <p>
@@ -1959,13 +1959,13 @@
         Module.Popups: Add wiki domain when hovering over interwiki pages; EX:en.w:Earth -&gt; hover over link to en.q:Earth -&gt; show "Earth wiki:en.wikiquote.org" {suggested by Schnark}. See: <a href="https://en.wikipedia.org/wiki/Earth" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Earth</a>
       </li>
       <li>
-        Module.Popups: Add option to skip evaluation of long templates; EX:See "Template token max". See: <a href="http://xowa.org/home/wiki/Options/Popups.html" id="xolnki_27" title="Options/Popups" class="xowa-visited">Options/Popups</a>
+        Module.Popups: Add option to skip evaluation of long templates; EX:See "Template token max". See: <a href="http://xowa.org/home/wiki/Options/Popups.html" id="xolnki_27" title="Options/Popups">Options/Popups</a>
       </li>
       <li>
-        Module.Popups: Add option to show popups in namespaces only; EX:See "Allowed namespaces" {suggested by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Popups.html" id="xolnki_28" title="Options/Popups" class="xowa-visited">Options/Popups</a>
+        Module.Popups: Add option to show popups in namespaces only; EX:See "Allowed namespaces" {suggested by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Popups.html" id="xolnki_28" title="Options/Popups">Options/Popups</a>
       </li>
       <li>
-        Module.Popups: Add option to scan forward additional words to stop at header; EX:See "Scan forward for header" {suggested by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Popups.html" id="xolnki_29" title="Options/Popups" class="xowa-visited">Options/Popups</a>
+        Module.Popups: Add option to scan forward additional words to stop at header; EX:See "Scan forward for header" {suggested by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Popups.html" id="xolnki_29" title="Options/Popups">Options/Popups</a>
       </li>
     </ul>
     <p>
@@ -2097,7 +2097,7 @@
     </p>
     <ul>
       <li>
-        Module.Popups: Add Popup functionality for hovering over links. See <a href="http://xowa.org/home/wiki/Options/Popups.html" id="xolnki_31" title="Options/Popups" class="xowa-visited">Options/Popups</a> and <a href="http://xowa.org/home/wiki/App/Xtn/Html/Popups.html" id="xolnki_32" title="App/Xtn/Html/Popups">App/Xtn/Html/Popups</a>.
+        Module.Popups: Add Popup functionality for hovering over links. See <a href="http://xowa.org/home/wiki/Options/Popups.html" id="xolnki_31" title="Options/Popups">Options/Popups</a> and <a href="http://xowa.org/home/wiki/App/Xtn/Html/Popups.html" id="xolnki_32" title="App/Xtn/Html/Popups">App/Xtn/Html/Popups</a>.
       </li>
       <li>
         Scribunto: Handle new package.lua (affects location map not loading on cities / countries); EX:package.lua. See: <a href="https://en.wikipedia.org/wiki/Paris" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Paris</a>
@@ -2229,7 +2229,7 @@
         Javascript: Add gadget to show / hide NavFrames. See: <a href="https://en.wikipedia.org/wiki/Teresa_of_Ávila" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Teresa_of_Ávila</a>
       </li>
       <li>
-        Javascript: Add option to control default show / hide state of Table of Contents. See: <a href="http://xowa.org/home/wiki/Options/Wiki/HTML.html" id="xolnki_37" title="Options/Wiki/HTML">Options/Wiki/HTML</a> <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Table_of_contents.html" id="xolnki_38" title="Diagnostics/Javascript/Table of contents">Diagnostics/Javascript/Table_of_contents</a>
+        Javascript: Add option to control default show / hide state of Table of Contents. See: <a href="http://xowa.org/home/wiki/Options/Wiki/HTML.html" id="xolnki_37" title="Options/Wiki/HTML">Options/Wiki/HTML</a> <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Table_of_contents.html" id="xolnki_38" title="Diagnostics/Javascript/Table of contents" class="xowa-visited">Diagnostics/Javascript/Table_of_contents</a>
       </li>
       <li>
         Javascript: Add option to control default show / hide state of collapsible tables. See: <a href="http://xowa.org/home/wiki/Options/Wiki/HTML.html" id="xolnki_39" title="Options/Wiki/HTML">Options/Wiki/HTML</a> <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Collapsible.html" id="xolnki_40" title="Diagnostics/Javascript/Collapsible">Diagnostics/Javascript/Collapsible</a>
@@ -2435,7 +2435,7 @@
         Wikivoyage.Listings: Handle invalid key-less attribute for wikis with a listing-template (affects some listings not showing); EX:&lt;sleep name='name_0' 'invalid'&gt;&lt;/sleep&gt;. See: <a href="https://nl.wikivoyage.org/wiki/Rome" rel="nofollow" class="external free">https://nl.wikivoyage.org/wiki/Rome</a>
       </li>
       <li>
-        Options: Escape single quotes / double quotes for &lt;input&gt; value; EX:&lt;input value="a'b"/&gt;. See: <a href="http://xowa.org/home/wiki/Options/HTML_Tidy.html" id="xolnki_52" title="Options/HTML Tidy">Options/HTML_Tidy</a>
+        Options: Escape single quotes / double quotes for &lt;input&gt; value; EX:&lt;input value="a'b"/&gt;. See: <a href="http://xowa.org/home/wiki/Options/HTML_Tidy.html" id="xolnki_52" title="Options/HTML Tidy" class="xowa-visited">Options/HTML_Tidy</a>
       </li>
       <li>
         Gui: Handle errors while trying to show error page (affects endless recursion if fatal error during logging). See: <a href="https://en.wikipedia.org/wiki/Portal:Current_events/2006_September_7" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Portal:Current_events/2006_September_7</a>
@@ -2540,7 +2540,7 @@
     </p>
     <ul>
       <li>
-        Html.Jtidy: Make JTidy the default Tidy engine. See: <a href="http://xowa.org/home/wiki/Diagnostics/HTML_Tidy.html" id="xolnki_54" title="Diagnostics/HTML Tidy">Diagnostics/HTML_Tidy</a>
+        Html.Jtidy: Make JTidy the default Tidy engine. See: <a href="http://xowa.org/home/wiki/Diagnostics/HTML_Tidy.html" id="xolnki_54" title="Diagnostics/HTML Tidy" class="xowa-visited">Diagnostics/HTML_Tidy</a>
       </li>
       <li>
         Lang.Numbers: Translate numbers for Arabic languages (affects many pages showing large images); EX:{{formatnum:۱۵۰|R}} -&gt; 150. See: <a href="https://fa.wikipedia.org/wiki/نیشابور" rel="nofollow" class="external free">https://fa.wikipedia.org/wiki/نیشابور</a>
@@ -3835,7 +3835,7 @@
         Wikivoyage.RelatedArticles: Implement #relatedArticles. See: <a href="https://de.wikivoyage.org/wiki/Europa" rel="nofollow" class="external free">https://de.wikivoyage.org/wiki/Europa</a>
       </li>
       <li>
-        Html: Add option for tidy mgr. See: <a href="http://xowa.org/home/wiki/Options/HTML_Tidy.html" id="xolnki_84" title="Options/HTML Tidy">Options/HTML_Tidy</a>
+        Html: Add option for tidy mgr. See: <a href="http://xowa.org/home/wiki/Options/HTML_Tidy.html" id="xolnki_84" title="Options/HTML Tidy" class="xowa-visited">Options/HTML_Tidy</a>
       </li>
       <li>
         Parser.Underscore: Register "＿＿" as alternate prefix for double-underscore keywords; EX:＿＿目次＿＿. See: <a href="https://ja.wikipedia.org" rel="nofollow" class="external free">https://ja.wikipedia.org</a>
@@ -4103,7 +4103,7 @@
         Parser.Para: Remove blank lines when line starts with &lt;/td&gt;; EX:&lt;table&gt;&lt;tr&gt;&lt;td&gt;a\n&lt;/td&gt;\n\n\n\n&lt;/tr&gt;&lt;/table&gt;. See: <a href="https://fr.wikipedia.org/wiki/Portail:Génie_mécanique" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Portail:Génie_mécanique</a>
       </li>
       <li>
-        Parser.Para: Enclose final line of cell within existing para. See: <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_93" title="Dashboard/Image databases" class="xowa-visited">Dashboard/Image_databases</a> <a href="https://ru.wikipedia.org/" rel="nofollow" class="external free">https://ru.wikipedia.org/</a>
+        Parser.Para: Enclose final line of cell within existing para. See: <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_93" title="Dashboard/Image databases">Dashboard/Image_databases</a> <a href="https://ru.wikipedia.org/" rel="nofollow" class="external free">https://ru.wikipedia.org/</a>
       </li>
       <li>
         Parser.Table: Recognize header cell if line starts with space; EX:" ! a | b !! c | d". See: <a href="http://ru.wikipedia.org/wiki/Храмы_Санкт-Петербурга" rel="nofollow" class="external free">http://ru.wikipedia.org/wiki/Храмы_Санкт-Петербурга</a>
@@ -4135,7 +4135,7 @@
     </p>
     <ul>
       <li>
-        Help.Download: Fix links for commonswiki (was pointing to enwikisource) {detected by Miles}. See: <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_94" title="Dashboard/Image databases" class="xowa-visited">Dashboard/Image_databases</a>
+        Help.Download: Fix links for commonswiki (was pointing to enwikisource) {detected by Miles}. See: <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_94" title="Dashboard/Image databases">Dashboard/Image_databases</a>
       </li>
     </ul>
     <p>
