--- a/home/wiki/Change_log/2015.html
+++ b/home/wiki/Change_log/2015.html
@@ -424,7 +424,7 @@
     </p>
     <ul>
       <li>
-        Diagnostics: Add better messages for JTidy diagnostics. See: <a href="http://xowa.org/home/wiki/Diagnostics/HTML_Tidy.html" id="xolnki_3" title="Diagnostics/HTML Tidy">Diagnostics/HTML_Tidy</a> <a href="http://xowa.org/home/wiki/Diagnostics/JTidy.html" id="xolnki_4" title="Diagnostics/JTidy">Diagnostics/JTidy</a>
+        Diagnostics: Add better messages for JTidy diagnostics. See: <a href="http://xowa.org/home/wiki/Diagnostics/HTML_Tidy.html" id="xolnki_3" title="Diagnostics/HTML Tidy" class="xowa-visited">Diagnostics/HTML_Tidy</a> <a href="http://xowa.org/home/wiki/Diagnostics/JTidy.html" id="xolnki_4" title="Diagnostics/JTidy" class="xowa-visited">Diagnostics/JTidy</a>
       </li>
     </ul>
     <p>
@@ -557,7 +557,7 @@
     </p>
     <ul>
       <li>
-        Diagnostics: Fix broken diagnostic for Wikivoyage. See: <a href="http://xowa.org/home/wiki/Diagnostics/Xtns/Wikivoyage/All.html" id="xolnki_6" title="Diagnostics/Xtns/Wikivoyage/All">Diagnostics/Xtns/Wikivoyage/All</a>
+        Diagnostics: Fix broken diagnostic for Wikivoyage. See: <a href="http://xowa.org/home/wiki/Diagnostics/Xtns/Wikivoyage/All.html" id="xolnki_6" title="Diagnostics/Xtns/Wikivoyage/All" class="xowa-visited">Diagnostics/Xtns/Wikivoyage/All</a>
       </li>
     </ul>
     <p>
@@ -630,7 +630,7 @@
         Interwiki: Show all available languages "In other languages", not just those specified in xowa.gfs. See: <a href="https://en.wikipedia.org/wiki/Earth" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Earth</a>
       </li>
       <li>
-        Import: Add support for building custom wikis. See: <a href="http://xowa.org/home/wiki/App/Xtn/Import/Dansguardian.html" id="xolnki_8" title="App/Xtn/Import/Dansguardian">App/Xtn/Import/Dansguardian</a>
+        Import: Add support for building custom wikis. See: <a href="http://xowa.org/home/wiki/App/Xtn/Import/Dansguardian.html" id="xolnki_8" title="App/Xtn/Import/Dansguardian" class="xowa-visited">App/Xtn/Import/Dansguardian</a>
       </li>
     </ul>
     <p>
@@ -677,10 +677,10 @@
     </p>
     <ul>
       <li>
-        Doc: Add details for installing Firefox Addon for Pale Moon {suggested by pirate}. See: <a href="http://xowa.org/home/wiki/App/Xtn/Browser/XOWA_viewer.html" id="xolnki_9" title="App/Xtn/Browser/XOWA viewer" class="xowa-visited">App/Xtn/Browser/XOWA_viewer</a>
+        Doc: Add details for installing Firefox Addon for Pale Moon {suggested by pirate}. See: <a href="http://xowa.org/home/wiki/App/Xtn/Browser/XOWA_viewer.html" id="xolnki_9" title="App/Xtn/Browser/XOWA viewer">App/Xtn/Browser/XOWA_viewer</a>
       </li>
       <li>
-        Doc: Add details for dansguardian filter. See: <a href="http://xowa.org/home/wiki/App/Xtn/Import/Dansguardian.html" id="xolnki_10" title="App/Xtn/Import/Dansguardian">App/Xtn/Import/Dansguardian</a>
+        Doc: Add details for dansguardian filter. See: <a href="http://xowa.org/home/wiki/App/Xtn/Import/Dansguardian.html" id="xolnki_10" title="App/Xtn/Import/Dansguardian" class="xowa-visited">App/Xtn/Import/Dansguardian</a>
       </li>
     </ul>
     <p>
@@ -1664,7 +1664,7 @@
         SWT: Update SWT to v4.5 (affects printing not working); EX:/bin/your_os_name/swt/. See: <a href="http://xowa.org/home/wiki/Dev/SWT.html" id="xolnki_28" title="Dev/SWT">Dev/SWT</a>
       </li>
       <li>
-        XULRunner: Update XULRunner to version 31 (version 24 on Linux) (affects minor formatting issues on a small number of pages; wikis not downloading on some linux distros). See: <a href="http://xowa.org/home/wiki/App/UI/HTML_Browser.html" id="xolnki_29" title="App/UI/HTML Browser" class="xowa-visited">App/UI/HTML_Browser</a> <a href="https://en.wikisource.org/wiki/Lubbers_Don't_Live" rel="nofollow" class="external free">https://en.wikisource.org/wiki/Lubbers_Don't_Live</a>!
+        XULRunner: Update XULRunner to version 31 (version 24 on Linux) (affects minor formatting issues on a small number of pages; wikis not downloading on some linux distros). See: <a href="http://xowa.org/home/wiki/App/UI/HTML_Browser.html" id="xolnki_29" title="App/UI/HTML Browser">App/UI/HTML_Browser</a> <a href="https://en.wikisource.org/wiki/Lubbers_Don't_Live" rel="nofollow" class="external free">https://en.wikisource.org/wiki/Lubbers_Don't_Live</a>!
       </li>
     </ul>
     <p>
@@ -2170,7 +2170,7 @@
     </p>
     <ul>
       <li>
-        Search: Support search over multiple wikis. See: <a href="http://xowa.org/home/wiki/Options/Search.html" id="xolnki_42" title="Options/Search" class="xowa-visited">Options/Search</a>
+        Search: Support search over multiple wikis. See: <a href="http://xowa.org/home/wiki/Options/Search.html" id="xolnki_42" title="Options/Search">Options/Search</a>
       </li>
     </ul>
     <p>
@@ -2485,7 +2485,7 @@
     </p>
     <ul>
       <li>
-        Database: Rename extension from .sqlite3 to .xowa. See: <a href="http://xowa.org/home/wiki/Dev/Design/Database.html" id="xolnki_48" title="Dev/Design/Database" class="xowa-visited">Dev/Design/Database</a>
+        Database: Rename extension from .sqlite3 to .xowa. See: <a href="http://xowa.org/home/wiki/Dev/Design/Database.html" id="xolnki_48" title="Dev/Design/Database">Dev/Design/Database</a>
       </li>
       <li>
         Database: Support detachable databases.
