--- a/home/wiki/Dashboard/Image_databases.html
+++ b/home/wiki/Dashboard/Image_databases.html
@@ -31,7 +31,7 @@
           <a href="#Files"><span class="tocnumber">2</span> <span class="toctext">Files</span></a>
         </li>
         <li class="toclevel-1 tocsection-3">
-          <a href="#Information_"><span class="tocnumber">3</span> <span class="toctext">Information</span></a> 
+          <a href="#Information_.5B8.5D"><span class="tocnumber">3</span> <span class="toctext">Information <sup>[8]</sup></span></a> 
           <ul>
             <li class="toclevel-2 tocsection-4">
               <a href="#Package_types"><span class="tocnumber">3.1</span> <span class="toctext">Package types</span></a>
@@ -2804,7 +2804,7 @@
       </tr>
     </table>
     <h2>
-      <span class="mw-headline" id="Information_">Information <sup id="cite_ref-folder_example_7-0" class="reference"><a href="#cite_note-folder_example-7">[8]</a></sup></span>
+      <span class="mw-headline" id="Information_.5B8.5D">Information <sup id="cite_ref-folder_example_7-0" class="reference"><a href="#cite_note-folder_example-7">[8]</a></sup></span>
     </h2>
     <h3>
       <span class="mw-headline" id="Package_types">Package types</span>
