--- a/home/wiki/Dev/File/Setup/Mac_OS_X.html
+++ b/home/wiki/Dev/File/Setup/Mac_OS_X.html
@@ -46,7 +46,7 @@
       </li>
     </ul>
     <p>
-      If you do succeed in installing ImageMagick/Inkscape, please help XOWA and detail your experience. See <a href="http://xowa.org/home/wiki/Help/Feedback.html" id="xolnki_3" title="Help/Feedback" class="xowa-visited">Help/Feedback</a>.
+      If you do succeed in installing ImageMagick/Inkscape, please help XOWA and detail your experience. See <a href="http://xowa.org/home/wiki/Help/Feedback.html" id="xolnki_3" title="Help/Feedback">Help/Feedback</a>.
     </p>
   
     </div>
