--- a/home/wiki/Help/Contents.html
+++ b/home/wiki/Help/Contents.html
@@ -41,7 +41,7 @@
               <a href="http://xowa.org/home/wiki/App/Setup/System_requirements.html" id="xolnki_3" title="App/Setup/System requirements">System requirements</a><br>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Setup/Installation.html" id="xolnki_4" title="App/Setup/Installation" class="xowa-visited">Installing</a>
+              <a href="http://xowa.org/home/wiki/App/Setup/Installation.html" id="xolnki_4" title="App/Setup/Installation">Installing</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/App/Setup/Upgrading.html" id="xolnki_5" title="App/Setup/Upgrading">Upgrading</a>
@@ -54,16 +54,16 @@
         <td style='width:30%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Import/Import_overview.html" id="xolnki_6" title="App/Import/Import overview" class="xowa-visited">Import Overview</a><br>
+              <a href="http://xowa.org/home/wiki/App/Import/Import_overview.html" id="xolnki_6" title="App/Import/Import overview">Import Overview</a><br>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/App/Import/Simple_Wikipedia.html" id="xolnki_7" title="App/Import/Simple Wikipedia">Simple Wikipedia</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Import/English_Wikipedia.html" id="xolnki_8" title="App/Import/English Wikipedia" class="xowa-visited">English Wikipedia</a>
+              <a href="http://xowa.org/home/wiki/App/Import/English_Wikipedia.html" id="xolnki_8" title="App/Import/English Wikipedia">English Wikipedia</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Import/Other_wikis.html" id="xolnki_9" title="App/Import/Other wikis">Other wikis</a>
+              <a href="http://xowa.org/home/wiki/App/Import/Other_wikis.html" id="xolnki_9" title="App/Import/Other wikis" class="xowa-visited">Other wikis</a>
             </li>
           </ul>
         </td>
@@ -151,7 +151,7 @@
               <a href="http://xowa.org/home/wiki/App/Xtn/Browser/HTTP_Server.html" id="xolnki_21" title="App/Xtn/Browser/HTTP Server">HTTP Server</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Xtn/Browser/XOWA_viewer.html" id="xolnki_22" title="App/Xtn/Browser/XOWA viewer" class="xowa-visited">XOWA Viewer</a>
+              <a href="http://xowa.org/home/wiki/App/Xtn/Browser/XOWA_viewer.html" id="xolnki_22" title="App/Xtn/Browser/XOWA viewer">XOWA Viewer</a>
             </li>
           </ul>
         </td>
@@ -216,7 +216,7 @@
               <a href="http://xowa.org/home/wiki/App/Import/Shrinking.html" id="xolnki_31" title="App/Import/Shrinking">Shrinking a wiki</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Setup/Flash_card.html" id="xolnki_32" title="App/Setup/Flash card" class="xowa-visited">Installing to a flash card</a>
+              <a href="http://xowa.org/home/wiki/App/Setup/Flash_card.html" id="xolnki_32" title="App/Setup/Flash card">Installing to a flash card</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/App/Import/mwad.html" id="xolnki_33" title="App/Import/mwad">Generating a dump by</a> <a href="https://github.com/Mattze96/mwad" rel="nofollow" class="external text">mwad</a>
@@ -264,10 +264,10 @@
               <a href="http://xowa.org/home/wiki/App/Xtn/Html/Scripts.html" id="xolnki_40" title="App/Xtn/Html/Scripts">Sortable/collapsible tables</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Xtn/Import/Dansguardian.html" id="xolnki_41" title="App/Xtn/Import/Dansguardian">Dansguardian filter</a>
+              <a href="http://xowa.org/home/wiki/App/Xtn/Import/Dansguardian.html" id="xolnki_41" title="App/Xtn/Import/Dansguardian" class="xowa-visited">Dansguardian filter</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Xtn/Browser/XOWA_viewer.html" id="xolnki_42" title="App/Xtn/Browser/XOWA viewer" class="xowa-visited">Firefox Addon</a>
+              <a href="http://xowa.org/home/wiki/App/Xtn/Browser/XOWA_viewer.html" id="xolnki_42" title="App/Xtn/Browser/XOWA viewer">Firefox Addon</a>
             </li>
           </ul>
         </td>
@@ -277,7 +277,7 @@
         <td style='width:30%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/Diagnostics.html" id="xolnki_43" title="Diagnostics">Diagnostics</a>
+              <a href="http://xowa.org/home/wiki/Diagnostics.html" id="xolnki_43" title="Diagnostics" class="xowa-visited">Diagnostics</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/App/Setup/Installation/Self_extracting_exe.html" id="xolnki_44" title="App/Setup/Installation/Self extracting exe">Self extracting exe</a>
@@ -303,7 +303,7 @@
               <a href="http://xowa.org/home/wiki/Help/Contributing.html" id="xolnki_46" title="Help/Contributing">Contributing</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/Help/Feedback.html" id="xolnki_47" title="Help/Feedback" class="xowa-visited">Feedback</a>
+              <a href="http://xowa.org/home/wiki/Help/Feedback.html" id="xolnki_47" title="Help/Feedback">Feedback</a>
             </li>
           </ul>
         </td>
@@ -357,7 +357,7 @@
           </ul>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/Dev/Design/Database.html" id="xolnki_55" title="Dev/Design/Database" class="xowa-visited">Dev/Design/Database</a>
+              <a href="http://xowa.org/home/wiki/Dev/Design/Database.html" id="xolnki_55" title="Dev/Design/Database">Dev/Design/Database</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/Dev/Environment/Text_editor.html" id="xolnki_56" title="Dev/Environment/Text editor">Dev/Environment/Text editor</a>
@@ -378,7 +378,7 @@
               <a href="http://xowa.org/home/wiki/App/Wiki_types/Wikidata.html" id="xolnki_61" title="App/Wiki types/Wikidata">Wikis/Wikidata</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Wiki_types/Commons.html" id="xolnki_62" title="App/Wiki types/Commons">Wikis/Commons</a>
+              <a href="http://xowa.org/home/wiki/App/Wiki_types/Commons.html" id="xolnki_62" title="App/Wiki types/Commons" class="xowa-visited">Wikis/Commons</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/App/Basics/Files.html" id="xolnki_63" title="App/Basics/Files">Files</a>
