--- a/home/wiki/Help/Download_XOWA.html
+++ b/home/wiki/Help/Download_XOWA.html
@@ -28,10 +28,10 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.2.1/xowa_app_windows_64_v3.7.2.1.zip" rel="nofollow" class="external text">Windows (64-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.3.1/xowa_app_windows_64_v3.7.3.1.zip" rel="nofollow" class="external text">Windows (64-bit)</a>
       </li>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.2.1/xowa_app_windows_v3.7.2.1.zip" rel="nofollow" class="external text">Windows (32-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.3.1/xowa_app_windows_v3.7.3.1.zip" rel="nofollow" class="external text">Windows (32-bit)</a>
       </li>
     </ul>
     <h2>
@@ -39,10 +39,10 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.2.1/xowa_app_linux_64_v3.7.2.1.zip" rel="nofollow" class="external text">Linux (64-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.3.1/xowa_app_linux_64_v3.7.3.1.zip" rel="nofollow" class="external text">Linux (64-bit)</a>
       </li>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.2.1/xowa_app_linux_v3.7.2.1.zip" rel="nofollow" class="external text">Linux (32-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.3.1/xowa_app_linux_v3.7.3.1.zip" rel="nofollow" class="external text">Linux (32-bit)</a>
       </li>
     </ul>
     <h2>
@@ -50,10 +50,10 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.2.1/xowa_app_macosx_64_v3.7.2.1.zip" rel="nofollow" class="external text">Mac OS X (64-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.3.1/xowa_app_macosx_64_v3.7.3.1.zip" rel="nofollow" class="external text">Mac OS X (64-bit)</a>
       </li>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.2.1/xowa_app_macosx_v3.7.2.1.zip" rel="nofollow" class="external text">Mac OS X (32-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.3.1/xowa_app_macosx_v3.7.3.1.zip" rel="nofollow" class="external text">Mac OS X (32-bit)</a>
       </li>
     </ul>
     <h2>
@@ -61,7 +61,7 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.2.1/xowa_app_arm_v3.7.2.1.zip" rel="nofollow" class="external text">Raspberry Pi</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.3.1/xowa_app_arm_v3.7.3.1.zip" rel="nofollow" class="external text">Raspberry Pi</a>
       </li>
     </ul>
     <h2>
@@ -77,7 +77,7 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/archive/v3.7.2.1.zip" rel="nofollow" class="external text">Source code (Desktop)</a>
+        <a href="https://github.com/gnosygnu/xowa/archive/v3.7.3.1.zip" rel="nofollow" class="external text">Source code (Desktop)</a>
       </li>
     </ul>
     <h2>
@@ -96,7 +96,7 @@
     </h3>
     <ul>
       <li>
-        Wiki: Publish Haitian wikis. {requested by NickRance}
+        Wiki: Publish 2016-07 French Wikipedia, Wiktionary, Wikisource, Wikivoyage, Wikiquote, Wikibooks, Wikiversity, and Wikinews.
       </li>
     </ul>
     <h3>
@@ -107,139 +107,109 @@
     </p>
     <ul>
       <li>
-        Import: Fix 2016-07 English Wikipedia import failing.
+        HtmlView: Support redirects.
       </li>
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Resolved by</span>: Search for "PRIMARY KEY" if "UNIQUE KEY" is missing.
+        Links: <a href="https://fr.wikibooks.org/wiki/Portrait" rel="nofollow" class="external free">https://fr.wikibooks.org/wiki/Portrait</a> <a href="https://fr.wikiquote.org/wiki/" rel="nofollow" class="external free">https://fr.wikiquote.org/wiki/</a> <a href="https://fr.wikiquote.org/wiki/Paul_%C3%89luard" rel="nofollow" class="external free">https://fr.wikiquote.org/wiki/Paul_%C3%89luard</a>
       </dd>
     </dl>
     <ul>
       <li>
-        HtmlView: Support Table Of Contents.
-      </li>
-    </ul>
-    <ul>
-      <li>
-        Import: Include mwad (MediaWiki API dump) for creating XML dumps for Wikia and other wikis. {contributed by Mattze96}
+        HtmlView: Fix Table of contents not working for entries with &lt;br/&gt;.
       </li>
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/App/Import/mwad.html" id="xolnki_3" title="App/Import/mwad">App/Import/mwad</a>
+        Resolved by: Rewrite TOC generator.
+      </dd>
+      <dd>
+        Example: ==a&lt;br/&gt;b==.
+      </dd>
+      <dd>
+        Links: <a href="https://fr.wikipedia.org/wiki/Thermokarst" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Thermokarst</a> <a href="https://fr.wikipedia.org/wiki/Conseil_régional_du_Nord-Pas-de-Calais" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Conseil_régional_du_Nord-Pas-de-Calais</a> <a href="https://fr.wikipedia.org/wiki/Tour_de_ski_2007-2008" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Tour_de_ski_2007-2008</a>
       </dd>
     </dl>
     <ul>
       <li>
-        Install: Require Java 1.7, not Java 1.8. [broken since: v3.3.4.1]
+        HtmlView: Fix Table of contents not working for entries with duplicate entries.
       </li>
     </ul>
+    <dl>
+      <dd>
+        Resolved by: Rewrite TOC generator.
+      </dd>
+      <dd>
+        Example: ==a== ==a==.
+      </dd>
+      <dd>
+        Links: <a href="https://fr.wikipedia.org/wiki/Itanium" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Itanium</a> <a href="https://fr.wikipedia.org/wiki/10000" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/10000</a> <a href="https://fr.wikipedia.org/wiki/Liste_des_microprocesseurs_Intel" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Liste_des_microprocesseurs_Intel</a> <a href="https://fr.wikipedia.org/wiki/Technology_and_Entertainment_Software" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Technology_and_Entertainment_Software</a>
+      </dd>
+    </dl>
+    <ul>
+      <li>
+        HtmlView: Fix Table of contents not working for entries with references.
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        Resolved by: Rewrite TOC generator.
+      </dd>
+      <dd>
+        Example: ==a&lt;ref name="b"&gt;c==.
+      </dd>
+      <dd>
+        Links: <a href="https://fr.wikipedia.org/wiki/Dal" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Dal</a>
+      </dd>
+    </dl>
+    <ul>
+      <li>
+        HtmlView: Support PageBanner.
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        Links: <a href="https://en.wikivoyage.org/wiki/Paris" rel="nofollow" class="external free">https://en.wikivoyage.org/wiki/Paris</a>
+      </dd>
+    </dl>
     <p>
       <b>minor</b>
     </p>
     <ul>
       <li>
-        Wikibase: Fix script error for "Module:Wikidata:500 unknown datavalue type." on many ht.w pages.
+        Gui: Add "cancel" button to Edit pages. {detected by WeaverStever}
+      </li>
+    </ul>
+    <ul>
+      <li>
+        Css: Fix "indicators" showing in top-left corner.
       </li>
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Resolved by</span>: Change "wikibase-entityid" to "wikibase-item".
+        Resolved by: Update failover.css to use recent versions.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Example</span>: Erreur de script: =Module:Wikidata:500 unknown datavalue type..
-      </dd>
-      <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://ht.wikipedia.org/wiki/Srilanka" rel="nofollow" class="external free">https://ht.wikipedia.org/wiki/Srilanka</a>
+        Links: <a href="https://en.wikipedia.org/wiki/Earth" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Earth</a>
       </dd>
     </dl>
     <ul>
       <li>
-        Wikibase: Show specieswiki links in "In Other Languages". [broken since: v3.6.4.1]
+        PageHistory: Fix application close failing when page history has dupe.
       </li>
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Resolved by</span>: Change "specieswiki" abbreviation from ".species" to "species".
+        Resolved by: Ignore duplicate item in page history.
       </dd>
     </dl>
-    <ul>
-      <li>
-        Special: Enable delete on Special:XowaWikiInfo.
-      </li>
-    </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Special:XowaWikiInfo%3Fwiki%3Dsimple.wikipedia.org.html" id="xolnki_4" title="Special:XowaWikiInfo?wiki=simple.wikipedia.org" class="xowa-visited">Special:XowaWikiInfo?wiki=simple.wikipedia.org</a>
-      </dd>
-    </dl>
-    <p>
-      <b>trivial</b>
-    </p>
-    <ul>
-      <li>
-        Wikibase: Add "jamwiki" to list of known wikis.
-      </li>
-    </ul>
-    <ul>
-      <li>
-        Lang: Add new languages: aeb-arab; aeb-latn; dty; gor; lki; olo.
-      </li>
-    </ul>
-    <h3>
-      <span class="mw-headline" id="Server">Server</span>
-    </h3>
-    <p>
-      <b>major</b>
-    </p>
-    <ul>
-      <li>
-        HTTP Server: Fix images not showing when using "text" databases. [broken since: v3.6.3.4] {detected by ve3lst}
-      </li>
-    </ul>
-    <h3>
-      <span class="mw-headline" id="Android_2">Android</span>
-    </h3>
-    <p>
-      <b>minor</b>
-    </p>
-    <ul>
-      <li>
-        HtmlView: Ignore Table of Content markers.
-      </li>
-    </ul>
     <h3>
       <span class="mw-headline" id="Dev">Dev</span>
     </h3>
     <ul>
       <li>
-        Php_parser: Parse "[" and "]" as array.
-      </li>
-    </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Example</span>: ['a', 'b'] == array('a', 'b').
-      </dd>
-    </dl>
-    <ul>
-      <li>
-        Source: Make parser code thread safe.
-      </li>
-    </ul>
-    <ul>
-      <li>
-        Source: Change Scrib_core from static to instance.
-      </li>
-    </ul>
-    <ul>
-      <li>
-        Source: Refactor Xoa_ttl.
-      </li>
-    </ul>
-    <ul>
-      <li>
-        Source: Consolidate Redirect methods on Page.
+        Source: Make html generation code thread safe.
       </li>
     </ul>
   
