--- a/home/wiki/Help/Privacy/Desktop.html
+++ b/home/wiki/Help/Privacy/Desktop.html
@@ -93,7 +93,7 @@
           <a href="#File_download"><span class="tocnumber">6</span> <span class="toctext">File download</span></a>
         </li>
         <li class="toclevel-1 tocsection-7">
-          <a href="#Math_images_.28LaTEX_only.29"><span class="tocnumber">7</span> <span class="toctext">Math images (LaTEX only)</span></a>
+          <a href="#Math_images_.28LaTEX_only.29"><span class="tocnumber">7</span> <span class="toctext">Math images (LaT<sub>E</sub>X only)</span></a>
         </li>
         <li class="toclevel-1 tocsection-8">
           <a href="#Content_applications"><span class="tocnumber">8</span> <span class="toctext">Content applications</span></a>
@@ -183,7 +183,7 @@
       If you choose to use LaT<sub>E</sub>X then temporary files will be generated. All files are created in the following directory: <code>/xowa/file/name_of_wiki/math</code>.
     </p>
     <p>
-      You can always disable LaT<sub>E</sub>X again at <a href="http://xowa.org/home/wiki/Options/Math.html" id="xolnki_8" title="Options/Math" class="xowa-visited">Options/Math</a>
+      You can always disable LaT<sub>E</sub>X again at <a href="http://xowa.org/home/wiki/Options/Math.html" id="xolnki_8" title="Options/Math">Options/Math</a>
     </p>
     <h2>
       <span class="mw-headline" id="Content_applications">Content applications</span>
