--- a/home/wiki/Main_Page.html
+++ b/home/wiki/Main_Page.html
@@ -82,29 +82,17 @@
       <span class="mw-headline" id="Release_notes">Release notes</span>
     </h2>
     <p>
-      v3.7.2.1 features the following:
+      v3.7.3.1 features the following:
     </p>
     <ul>
       <li>
-        (Wiki) Publish 2016-07 Haitian Wikipedia
+        (Wiki) Publish 2016-07 French Wikipedia, Wiktionary, Wikisource, Wikivoyage, Wikiquote, Wikibooks, Wikiversity, and Wikinews
       </li>
       <li>
-        (PC) Fix 2016-07 English Wikipedia import failure
+        (PC) Fix Redirects not working for HTML databases
       </li>
       <li>
-        (Server) Fix images not showing for Wikitext databases
-      </li>
-      <li>
-        (PC) Add Table of Contents support for HTML databases on the PC
-      </li>
-      <li>
-        (PC) Include mwad (MediaWiki API dump) for creating XML dumps for Wikia and other wikis {contributed by Mattze96}
-      </li>
-      <li>
-        (PC) Fix minor Wikibase issues, including wikibase-item
-      </li>
-      <li>
-        (PC) Target Java 1.7, not Java 1.8
+        (PC) Fix minor Table of Contents issues for Wikitext / HTML databases
       </li>
     </ul>
     <p>
@@ -217,7 +205,7 @@
         v2.7.3 introduces a new Bookmarks page. See <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_15" title="Special:XowaBookmarks">Special:XowaBookmarks</a>
       </li>
       <li>
-        v2.6.5 uses SWT v4.5 and XULRunner v24. See <a href="http://xowa.org/home/wiki/Dev/SWT.html" id="xolnki_16" title="Dev/SWT">Dev/SWT</a> and <a href="http://xowa.org/home/wiki/App/UI/HTML_Browser.html" id="xolnki_17" title="App/UI/HTML Browser" class="xowa-visited">HTML Browser</a>
+        v2.6.5 uses SWT v4.5 and XULRunner v24. See <a href="http://xowa.org/home/wiki/Dev/SWT.html" id="xolnki_16" title="Dev/SWT">Dev/SWT</a> and <a href="http://xowa.org/home/wiki/App/UI/HTML_Browser.html" id="xolnki_17" title="App/UI/HTML Browser">HTML Browser</a>
       </li>
       <li>
         v2.6.3 uses WebKit for MacOSX. For more info, see <a href="http://xowa.org/home/wiki/Blog.html" id="xolnki_18" title="Blog">Blog</a><br>
@@ -236,7 +224,7 @@
         v2.4.2 has improved Search performance and v2.4.4 has added multi-wiki Search. For more info, see <a href="http://xowa.org/home/wiki/App/Search.html" id="xolnki_20" title="App/Search">App/Search</a>
       </li>
       <li>
-        v2.4.1 has introduced major database layout changes. For more info, see <a href="http://xowa.org/home/wiki/Dev/Design/Database.html" id="xolnki_21" title="Dev/Design/Database" class="xowa-visited">Database</a>
+        v2.4.1 has introduced major database layout changes. For more info, see <a href="http://xowa.org/home/wiki/Dev/Design/Database.html" id="xolnki_21" title="Dev/Design/Database">Database</a>
       </li>
     </ul>
     <h2>
@@ -336,7 +324,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_32" title="Dashboard/Image databases" class="xowa-visited">Image databases</a>
+          <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_32" title="Dashboard/Image databases">Image databases</a>
         </td>
         <td>
           Download image databases for your wiki
@@ -384,7 +372,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Diagnostics.html" id="xolnki_38" title="Diagnostics">Diagnostics</a>
+          <a href="http://xowa.org/home/wiki/Diagnostics.html" id="xolnki_38" title="Diagnostics" class="xowa-visited">Diagnostics</a>
         </td>
         <td>
           Run test pages to make sure that XOWA works on your system.
