--- a/home/wiki/Options/Files.html
+++ b/home/wiki/Options/Files.html
@@ -285,7 +285,7 @@ li.active a, li.active a:hover
               <a href="#Files"><span class="tocnumber">1</span> <span class="toctext">Files</span></a>
             </li>
             <li class="toclevel-1 tocsection-2">
-              <a href="#Cache_"><span class="tocnumber">2</span> <span class="toctext">Cache</span></a>
+              <a href="#Cache_.5B2.5D"><span class="tocnumber">2</span> <span class="toctext">Cache <sup>[2]</sup></span></a>
             </li>
             <li class="toclevel-1 tocsection-3">
               <a href="#System_Applications"><span class="tocnumber">3</span> <span class="toctext">System Applications</span></a>
@@ -318,7 +318,7 @@ li.active a, li.active a:hover
           </tr>
         </table>
         <h2>
-          <span class="mw-headline" id="Cache_">Cache <sup id="cite_ref-cache_1-0" class="reference"><a href="#cite_note-cache-1">[2]</a></sup></span>
+          <span class="mw-headline" id="Cache_.5B2.5D">Cache <sup id="cite_ref-cache_1-0" class="reference"><a href="#cite_note-cache-1">[2]</a></sup></span>
         </h2>
         <table class='options_table'>
           <tr>
@@ -360,9 +360,9 @@ li.active a, li.active a:hover
             <td>
 <textarea xowa_prop="xowa.api.usr.cache.info" class="options_textbox options_readonly" readonly='readonly' style="width: 600px; height: 100px;" id='xowa_prop_3'>
 cache folder: C:\xowa\file
-space used: 473.652 KB
-file count: 1
-oldest file: 2016-07-10 22:32:33
+space used: 9.623 MB
+file count: 686
+oldest file: 2016-07-15 10:05:53
 </textarea>
             </td>
           </tr>
