--- a/home/wiki/Options/Firefox_addon.html
+++ b/home/wiki/Options/Firefox_addon.html
@@ -310,7 +310,7 @@ li.active a, li.active a:hover
         </h2>
         <ol class="references">
           <li id="cite_note-install_by_firefox_exe-0">
-            <span class="mw-cite-backlink"><a href="#cite_ref-install_by_firefox_exe_0-0">^</a></span> <span class="reference-text">Installs the XOWA viewer add-on by running "firefox xowa_viewer.xpi". Note that Firefox should launch after clicking the install link. For more information, see <a href="http://xowa.org/home/wiki/App/Xtn/Browser/XOWA_viewer.html" id="xolnki_2" title="App/Xtn/Browser/XOWA viewer" class="xowa-visited">App/Xtn/Browser/XOWA_viewer</a></span>
+            <span class="mw-cite-backlink"><a href="#cite_ref-install_by_firefox_exe_0-0">^</a></span> <span class="reference-text">Installs the XOWA viewer add-on by running "firefox xowa_viewer.xpi". Note that Firefox should launch after clicking the install link. For more information, see <a href="http://xowa.org/home/wiki/App/Xtn/Browser/XOWA_viewer.html" id="xolnki_2" title="App/Xtn/Browser/XOWA viewer">App/Xtn/Browser/XOWA_viewer</a></span>
           </li>
           <li id="cite_note-firefox_exe_path-1">
             <span class="mw-cite-backlink"><a href="#cite_ref-firefox_exe_path_1-0">^</a></span> <span class="reference-text">Enter the path where Firefox is installed. (default is <code>firefox</code>) You may need to point this directly to your firefox executable if it doesn't work.</span>
