--- a/home/wiki/Options/Import_Dansguardian.html
+++ b/home/wiki/Options/Import_Dansguardian.html
@@ -296,7 +296,7 @@ li.active a, li.active a:hover
         </div><br>
          
         <p>
-          For more information, see <a href="http://xowa.org/home/wiki/App/Xtn/Import/Dansguardian.html" id="xolnki_2" title="App/Xtn/Import/Dansguardian">App/Xtn/Import/Dansguardian</a>
+          For more information, see <a href="http://xowa.org/home/wiki/App/Xtn/Import/Dansguardian.html" id="xolnki_2" title="App/Xtn/Import/Dansguardian" class="xowa-visited">App/Xtn/Import/Dansguardian</a>
         </p>
         <h2>
           <span class="mw-headline" id="Basic">Basic</span>
