--- a/home/wiki/Options/Math.html
+++ b/home/wiki/Options/Math.html
@@ -282,7 +282,7 @@ li.active a, li.active a:hover
               <a href="#Math"><span class="tocnumber">1</span> <span class="toctext">Math</span></a>
             </li>
             <li class="toclevel-1 tocsection-2">
-              <a href="#LaTEX"><span class="tocnumber">2</span> <span class="toctext">LaTEX</span></a>
+              <a href="#LaTEX"><span class="tocnumber">2</span> <span class="toctext">LaT<sub>E</sub>X</span></a>
             </li>
             <li class="toclevel-1 tocsection-3">
               <a href="#Notes"><span class="tocnumber">3</span> <span class="toctext">Notes</span></a>
