--- a/home/wiki/Options/Window.html
+++ b/home/wiki/Options/Window.html
@@ -282,7 +282,7 @@ li.active a, li.active a:hover
               <a href="#Font"><span class="tocnumber">1</span> <span class="toctext">Font</span></a>
             </li>
             <li class="toclevel-1 tocsection-2">
-              <a href="#HTML_Box_"><span class="tocnumber">2</span> <span class="toctext">HTML Box</span></a>
+              <a href="#HTML_Box_.5B3.5D"><span class="tocnumber">2</span> <span class="toctext">HTML Box <sup>[3]</sup></span></a>
             </li>
             <li class="toclevel-1 tocsection-3">
               <a href="#Status_Box"><span class="tocnumber">3</span> <span class="toctext">Status Box</span></a>
@@ -323,7 +323,7 @@ li.active a, li.active a:hover
           </tr>
         </table>
         <h2>
-          <span class="mw-headline" id="HTML_Box_">HTML Box <sup id="cite_ref-html_box_2-0" class="reference"><a href="#cite_note-html_box-2">[3]</a></sup></span>
+          <span class="mw-headline" id="HTML_Box_.5B3.5D">HTML Box <sup id="cite_ref-html_box_2-0" class="reference"><a href="#cite_note-html_box-2">[3]</a></sup></span>
         </h2>
         <table class='options_table'>
           <tr>
