--- a/home/wiki/Change_log/v3.7.3.1.html
+++ b/home/wiki/Change_log/v3.7.3.1.html
@@ -2,7 +2,7 @@
 <html dir="ltr">
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-  <title>App/Xtn/Browser/HTTP Server - XOWA</title>
+  <title>Change log/v3.7.3.1 - XOWA</title>
   <link rel="shortcut icon" href="https://gnosygnu.github.io/xowa/xowa_logo.png" />
   <link rel="stylesheet" href="https://gnosygnu.github.io/xowa/xowa_common.css" type="text/css">
   
@@ -11,69 +11,159 @@
 <div id="mw-page-base" class="noprint"></div>
 <div id="mw-head-base" class="noprint"></div>
 <div id="content" class="mw-body">
-  <h1 id="firstHeading" class="firstHeading"><span>App/Xtn/Browser/HTTP Server</span></h1>
+  <h1 id="firstHeading" class="firstHeading"><span>Change log/v3.7.3.1</span></h1>
   <div id="bodyContent" class="mw-body-content">
     <div id="siteSub">From XOWA: the free, open-source, offline wiki application</div>
     <div id="contentSub"></div>
     <div id="mw-content-text" lang="en" dir="ltr" class="mw-content-ltr">
     
+    <div id="toc" class="toc">
+      <div id="toctitle">
+        <h2>
+          Contents
+        </h2>
+      </div>
+      <ul>
+        <li class="toclevel-1 tocsection-1">
+          <a href="#v3.7.2.1_.282017-07-10.29"><span class="tocnumber">1</span> <span class="toctext">v3.7.2.1 (2017-07-10)</span></a> 
+          <ul>
+            <li class="toclevel-2 tocsection-2">
+              <a href="#Wiki"><span class="tocnumber">1.1</span> <span class="toctext">Wiki</span></a>
+            </li>
+            <li class="toclevel-2 tocsection-3">
+              <a href="#PC"><span class="tocnumber">1.2</span> <span class="toctext">PC</span></a>
+            </li>
+            <li class="toclevel-2 tocsection-4">
+              <a href="#Dev"><span class="tocnumber">1.3</span> <span class="toctext">Dev</span></a>
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </div>
     <h2>
-      <span class="mw-headline" id="Credits">Credits</span>
-    </h2>
-    <p>
-      Considerable thanks goes to Mattze96 for proposing and developing the HTTP server.
-    </p>
-    <h2>
-      <span class="mw-headline" id="Overview">Overview</span>
-    </h2>
-    <p>
-      As of v0.12.1, XOWA now includes an HTTP server in addition to a TCP server. The TCP server is used by the Firefox Add-On (See <a href="http://xowa.org/home/wiki/App/Xtn/Browser/XOWA_viewer.html" id="xolnki_2" title="App/Xtn/Browser/XOWA viewer">App/Xtn/Browser/XOWA_viewer</a>).
-    </p>
-    <p>
-      If you are using Firefox, the Firefox Add-On is the recommended solution for using XOWA within a browser. However, if you want to use XOWA from another browser (for example, Google Chrome) or across the network, you will want to use the HTTP server instead.
-    </p>
-    <p>
-      Note that the HTTP server is currently in an alpha stage, but should improve with coming releases. If you have any comments or feedback, please see <a href="https://sourceforge.net/p/xowa/discussion/general/thread/fa4baf84/" rel="nofollow" class="external free">https://sourceforge.net/p/xowa/discussion/general/thread/fa4baf84/</a>
-    </p>
-    <h2>
-      <span class="mw-headline" id="Usage">Usage</span>
+      <span class="mw-headline" id="v3.7.2.1_.282017-07-10.29">v3.7.2.1 (2017-07-10)</span>
     </h2>
     <h3>
-      <span class="mw-headline" id="Other_browsers">Other browsers</span>
+      <span class="mw-headline" id="Wiki">Wiki</span>
     </h3>
-    <p>
-      To use the XOWA HTTP server in another browser, do the following:
-    </p>
     <ul>
       <li>
-        Launch XOWA with the following command line: <code>java -jar /xowa/xowa_linux.jar --app_mode http_server --http_server_port 8080</code><sup id="cite_ref-port_80_0-0" class="reference"><a href="#cite_note-port_80-0">[1]</a></sup>
-      </li>
-      <li>
-        Launch your browser and navigate to <code>localhost:8080</code>
+        Wiki: Publish 2016-07 French Wikipedia, Wiktionary, Wikisource, Wikivoyage, Wikiquote, Wikibooks, Wikiversity, and Wikinews.
       </li>
     </ul>
     <h3>
-      <span class="mw-headline" id="Across_the_network">Across the network</span>
+      <span class="mw-headline" id="PC">PC</span>
     </h3>
     <p>
-      To use the XOWA HTTP server in a server setting, do the following:
+      <b>major</b>
     </p>
     <ul>
       <li>
-        Launch XOWA on the <b>server</b> machine with the command line <code>java -jar /xowa/xowa_linux.jar --app_mode http_server</code>
-      </li>
-      <li>
-        Launch your browser on a <b>client</b> machine and navigate to the IP Address of the server machine. <code>192.168.0.100:8080</code>
+        HtmlView: Support redirects.
       </li>
     </ul>
-    <h2>
-      <span class="mw-headline" id="Notes">Notes</span>
-    </h2>
-    <ol class="references">
-      <li id="cite_note-port_80-0">
-        <span class="mw-cite-backlink"><a href="#cite_ref-port_80_0-0">^</a></span> <span class="reference-text">Note that you will need to run XOWA as root if you choose to pass port 80 for http_server_port.</span>
+    <dl>
+      <dd>
+        Links: <a href="https://fr.wikibooks.org/wiki/Portrait" rel="nofollow" class="external free">https://fr.wikibooks.org/wiki/Portrait</a> <a href="https://fr.wikiquote.org/wiki/" rel="nofollow" class="external free">https://fr.wikiquote.org/wiki/</a> <a href="https://fr.wikiquote.org/wiki/Paul_%C3%89luard" rel="nofollow" class="external free">https://fr.wikiquote.org/wiki/Paul_%C3%89luard</a>
+      </dd>
+    </dl>
+    <ul>
+      <li>
+        HtmlView: Fix Table of contents not working for entries with &lt;br/&gt;.
       </li>
-    </ol>
+    </ul>
+    <dl>
+      <dd>
+        Resolved by: Rewrite TOC generator.
+      </dd>
+      <dd>
+        Example: ==a&lt;br/&gt;b==.
+      </dd>
+      <dd>
+        Links: <a href="https://fr.wikipedia.org/wiki/Thermokarst" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Thermokarst</a> <a href="https://fr.wikipedia.org/wiki/Conseil_régional_du_Nord-Pas-de-Calais" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Conseil_régional_du_Nord-Pas-de-Calais</a> <a href="https://fr.wikipedia.org/wiki/Tour_de_ski_2007-2008" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Tour_de_ski_2007-2008</a>
+      </dd>
+    </dl>
+    <ul>
+      <li>
+        HtmlView: Fix Table of contents not working for entries with duplicate entries.
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        Resolved by: Rewrite TOC generator.
+      </dd>
+      <dd>
+        Example: ==a== ==a==.
+      </dd>
+      <dd>
+        Links: <a href="https://fr.wikipedia.org/wiki/Itanium" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Itanium</a> <a href="https://fr.wikipedia.org/wiki/10000" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/10000</a> <a href="https://fr.wikipedia.org/wiki/Liste_des_microprocesseurs_Intel" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Liste_des_microprocesseurs_Intel</a> <a href="https://fr.wikipedia.org/wiki/Technology_and_Entertainment_Software" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Technology_and_Entertainment_Software</a>
+      </dd>
+    </dl>
+    <ul>
+      <li>
+        HtmlView: Fix Table of contents not working for entries with references.
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        Resolved by: Rewrite TOC generator.
+      </dd>
+      <dd>
+        Example: ==a&lt;ref name="b"&gt;c==.
+      </dd>
+      <dd>
+        Links: <a href="https://fr.wikipedia.org/wiki/Dal" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Dal</a>
+      </dd>
+    </dl>
+    <ul>
+      <li>
+        HtmlView: Support PageBanner.
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        Links: <a href="https://en.wikivoyage.org/wiki/Paris" rel="nofollow" class="external free">https://en.wikivoyage.org/wiki/Paris</a>
+      </dd>
+    </dl>
+    <p>
+      <b>minor</b>
+    </p>
+    <ul>
+      <li>
+        Gui: Add "cancel" button to Edit pages. {detected by WeaverStever}
+      </li>
+    </ul>
+    <ul>
+      <li>
+        Css: Fix "indicators" showing in top-left corner.
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        Resolved by: Update failover.css to use recent versions.
+      </dd>
+      <dd>
+        Links: <a href="https://en.wikipedia.org/wiki/Earth" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Earth</a>
+      </dd>
+    </dl>
+    <ul>
+      <li>
+        PageHistory: Fix application close failing when page history has dupe.
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        Resolved by: Ignore duplicate item in page history.
+      </dd>
+    </dl>
+    <h3>
+      <span class="mw-headline" id="Dev">Dev</span>
+    </h3>
+    <ul>
+      <li>
+        Source: Make html generation code thread safe.
+      </li>
+    </ul>
   
     </div>
   </div>
