--- a/home/wiki/Options.html
+++ b/home/wiki/Options.html
@@ -268,9 +268,7 @@ li.active a, li.active a:hover
       </table>
     </div>
     <div class="tabs">
-      <p>
-        <br>
-      </p>
+      <br>
       <div class='tab-content'>
         <div id="toc" class="toc">
           <div id="toctitle">
@@ -457,7 +455,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/HTML_Tidy.html" id="xolnki_17" title="Options/HTML Tidy">Tidy</a>
+              <a href="http://xowa.org/home/wiki/Options/HTML_Tidy.html" id="xolnki_17" title="Options/HTML Tidy" class="xowa-visited">Tidy</a>
             </td>
             <td>
               HTML Tidy options
@@ -470,7 +468,7 @@ li.active a, li.active a:hover
         <table class='options_table'>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Content_apps.html" id="xolnki_18" title="Options/Content apps" class="xowa-visited">Content Apps</a>
+              <a href="http://xowa.org/home/wiki/Options/Content_apps.html" id="xolnki_18" title="Options/Content apps">Content Apps</a>
             </td>
             <td>
               Content applications (web browser, image viewer, media player)
@@ -486,7 +484,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/HTTP_server.html" id="xolnki_20" title="Options/HTTP server" class="xowa-visited">HTTP Server</a>
+              <a href="http://xowa.org/home/wiki/Options/HTTP_server.html" id="xolnki_20" title="Options/HTTP server">HTTP Server</a>
             </td>
             <td>
               HTTP Server: Run XOWA as an HTTP Server
@@ -507,7 +505,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Search.html" id="xolnki_22" title="Options/Search" class="xowa-visited">Search</a>
+              <a href="http://xowa.org/home/wiki/Options/Search.html" id="xolnki_22" title="Options/Search">Search</a>
             </td>
             <td>
               Search options (controls behavior for Special:Search)
@@ -515,7 +513,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Popups.html" id="xolnki_23" title="Options/Popups" class="xowa-visited">Popups</a>
+              <a href="http://xowa.org/home/wiki/Options/Popups.html" id="xolnki_23" title="Options/Popups">Popups</a>
             </td>
             <td>
               Popups that appear when hovering over a link
@@ -528,7 +526,7 @@ li.active a, li.active a:hover
         <table class='options_table'>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Math.html" id="xolnki_24" title="Options/Math" class="xowa-visited">Math</a>
+              <a href="http://xowa.org/home/wiki/Options/Math.html" id="xolnki_24" title="Options/Math">Math</a>
             </td>
             <td>
               Math options (text called in an {{#math}} statement)
@@ -565,7 +563,7 @@ li.active a, li.active a:hover
         <table class='options_table'>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Dev.html" id="xolnki_28" title="Options/Dev" class="xowa-visited">Dev</a>
+              <a href="http://xowa.org/home/wiki/Options/Dev.html" id="xolnki_28" title="Options/Dev">Dev</a>
             </td>
             <td>
               Developer options
