--- a/home/wiki/Options/Wiki_HTML.html
+++ b/home/wiki/Options/Wiki_HTML.html
@@ -285,7 +285,7 @@ li.active a, li.active a:hover
               <a href="#Alt_text"><span class="tocnumber">3</span> <span class="toctext">Alt text</span></a>
             </li>
             <li class="toclevel-1 tocsection-4">
-              <a href="#Collapsible_"><span class="tocnumber">4</span> <span class="toctext">Collapsible</span></a>
+              <a href="#Collapsible_.5B6.5D"><span class="tocnumber">4</span> <span class="toctext">Collapsible <sup>[6]</sup></span></a>
             </li>
             <li class="toclevel-1 tocsection-5">
               <a href="#Notes"><span class="tocnumber">5</span> <span class="toctext">Notes</span></a>
@@ -374,7 +374,7 @@ li.active a, li.active a:hover
           </tr>
         </table>
         <h2>
-          <span class="mw-headline" id="Collapsible_">Collapsible <sup id="cite_ref-collapsible_5-0" class="reference"><a href="#cite_note-collapsible-5">[6]</a></sup></span>
+          <span class="mw-headline" id="Collapsible_.5B6.5D">Collapsible <sup id="cite_ref-collapsible_5-0" class="reference"><a href="#cite_note-collapsible-5">[6]</a></sup></span>
         </h2>
         <table class='options_table'>
           <tr>
@@ -504,7 +504,7 @@ li.active a, li.active a:hover
             </ul><span class="reference-text">Saving the hide/show setting on a page by page basis will be supported in a future version, but probably not anytime soon.</span>
           </li>
           <li id="cite_note-collapsible_toc-6">
-            <span class="mw-cite-backlink"><a href="#cite_ref-collapsible_toc_6-0">^</a></span> <span class="reference-text">All table of contents have a Show / Hide link. See <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Table_of_contents.html" id="xolnki_2" title="Diagnostics/Javascript/Table of contents">Diagnostics/Javascript/Table_of_contents</a><br>
+            <span class="mw-cite-backlink"><a href="#cite_ref-collapsible_toc_6-0">^</a></span> <span class="reference-text">All table of contents have a Show / Hide link. See <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Table_of_contents.html" id="xolnki_2" title="Diagnostics/Javascript/Table of contents" class="xowa-visited">Diagnostics/Javascript/Table_of_contents</a><br>
             Choose one of the following (default is <code>unchecked</code>)</span>
             <ul>
               <li>
